--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "chess.js": "^0.13.3",
     "react": "18.0.0",
     "react-native": "0.69.1"
   },
