--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-svg": "^12.3.0",
-    "react-native-threads": "^0.0.19",
+    "react-native-threads": "^0.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
