--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chess.js": "^0.13.3",
     "react": "18.0.0",
     "react-native": "0.69.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
